objects/DMAPP__Insight_Smart_Business_Map__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Industry_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Industry Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Namespace__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Insight Namespace</label>
        <referenceTo>DMAPP__Insight_Namespace__c</referenceTo>
        <relationshipLabel>Smart Business Maps</relationshipLabel>
        <relationshipName>Smart_Business_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Subcategory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subcategory</label>
        <referenceTo>DMAPP__Insight_Subcategory__c</referenceTo>
        <relationshipLabel>Insight Smart Business Maps</relationshipLabel>
        <relationshipName>Insight_Smart_Business_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tags__c</fullName>
        <label>Tags</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <label>Insight Smart Business Map</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight Smart Business Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>